# pint-xarray

./: .codecov.yml  .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  HOW_TO_RELEASE.rst  NOTICE  README.md  __init__.py  azure-pipelines.yml  blogpost.md  conftest.py  pixi.toml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test.txt
.github/workflows/: ci-additional.yml  ci-pint-master.yml  ci-pint-pre.yml  ci.yml  linting.yml  nightly.yml  parse_logs.py  pre-commit-autoupdate.yml  pypi.yaml
astropy_xarray/: __init__.py  accessors.py  compat.py  conversion.py  errors.py  formatting.py  index.py  testing.py  time_compat.py
astropy_xarray/coordinates/: __init__.py  core.py  frame.py  representation.py  sky_coord.py
astropy_xarray/tests/: multi_index_utils.py  test_accessors.py  test_accessors_coords.py  test_accessors_log.py  test_accessors_skycoords.py  test_accessors_time.py  test_conversion.py  test_formatting.py  test_frame_conversion.py  test_frame_rep.py  test_index.py  test_sky_coord.py  test_testing.py  test_time.py  test_visibility.py  test_visibility_serialization.py  utils.py
ci/: add-conda-to-path.yml  install-upstream-dev.sh  install.yml  requirements.txt  unit-tests.yml
ci/requirements/: py36.yml  py37.yml  py38.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  conversion.rst  creation.rst  examples.rst  index.rst  installation.rst  requirements.txt  terminology.rst  whats-new.rst
docs/examples/: plotting.ipynb  requirements.txt  skycoord.ipynb  specialized_quantities.ipynb
licenses/: XARRAY_LICENSE
pint_xarray/: __init__.py  _expects.py  accessors.py  checking.py  compat.py  conversion.py  errors.py  formatting.py  index.py  itertools.py  testing.py  wraps_ufunc.py
pint_xarray/tests/: test_accessors.py  test_checking.py  test_conversion.py  test_expects.py  test_formatting.py  test_index.py  test_itertools.py  test_testing.py  utils.py
pintxarray/: __init__.py  accessors.py  conversion.py  indexing.py
pintxarray/tests/: test_accessors.py  test_conversion.py  utils.py
