[project]
name = "pint-xarray"
authors = [
  { name = "Tom Nicholas", email = "tomnicholas1@googlemail.com" },
]
description = "Physical units interface to xarray using Pint"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
  "xarray >= 2023.07.0",
  "numpy >= 1.26",
  "pint >= 0.24",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/xarray-contrib/pint-xarray"
Documentation = "https://pint-xarray.readthedocs.io/en/stable"

[tool.setuptools.packages.find]
include = [
  "pint_xarray",
  "pint_xarray.tests",
]

[build-system]
requires = ["setuptools >= 77", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.ruff]
target-version = "py311"
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
]
line-length = 100

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
  "UP038",
]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # flake8-tidy-imports
  "W",
]
extend-safe-fixes = [
  "TID252", # absolute imports
]
fixable = ["I", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["pint_xarray"]
known-third-party = [
  "xarray",
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.coverage.run]
source = ["pint_xarray"]
branch = true
omit = ["pint_xarray/tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
