[metadata]
name = pint-xarray
author = Tom Nicholas
author_email = tomnicholas1@googlemail.com
description = Physical units interface to xarray using Pint
url = https://github.com/TomNicholas/pint-xarray
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.17
    xarray >= 0.16
    pint >= 0.13
    importlib-metadata; python_version < "3.8"

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs

[isort]
default_section = THIRDPARTY
known_first_party = pint_xarray
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88