[metadata]
name = pint-xarray
author = Tom Nicholas
author_email = tomnicholas1@googlemail.com
description = Physical units interface to xarray using Pint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xarray-contrib/pint-xarray
project_urls =
  Documentation=https://pint-xarray.readthedocs.io/en/stable
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.17
    xarray >= 0.16.1
    pint >= 0.16
    importlib-metadata; python_version < "3.8"

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
