[metadata]
name = pint-xarray
author = Tom Nicholas
author_email = tomnicholas1@googlemail.com
description = Physical units interface to xarray using Pint
url = https://github.com/xarray-contrib/pint-xarray
project_urls =
  Documentation=https://pint-xarray.readthedocs.io/en/stable
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy >= 1.17
    xarray >= 0.16.1
    pint >= 0.16
